verif/test/deca/context/invalid/affect-float-verif.res
src/test/deca/context/invalid/affect-float.deca:11:7: Cannot assign expression of type 'float' to a variable of type 'int'
